ipfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipfs-service
spec:
  type: LoadBalancer
  ports:
    - name: api
      port: 5001
      targetPort: 5001
    - name: gateway
      port: 8080
      targetPort: 8080
    - name: swarm
      port: 4001
      targetPort: 4001
  selector:
    app: ipfs
